--- a/style.css
+++ b/style.css
@@ -1,21 +1,24 @@
-html {
-    scroll-behavior: smooth;
-  }
-
 * {
   box-sizing: border-box;
- }
+   }
+   
+html {
+  scroll-behavior: smooth;
+  }
+
 body {
   font-family: 'Roboto';
   font-style: normal;
   height: 100%;
-  background-color: #F5F5F5;
+  /* background-color: #F5F5F5; */
+  background-color: #FFFFFF;
   max-width: 1280px;
+  margin: 0 auto;
 }
 
 ul, li{
- list-style: none;
- margin: 0;
+  list-style: none;
+  margin: 0;
 }
 
 a {
@@ -28,174 +31,216 @@ a {
   height: 31px;
   margin-left: 80px;
   margin-right: 100px;
+  margin-top: 17px;
 }
 
 .navigation {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 8px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px;
 }
 
 .header__link {
- color:#5562FF;
- font-weight: 700;
- font-size: 20px;
- line-height: 23px;
+  color:#5562FF;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
 }
 
 
 .navigation__list {
-    display: flex;
-    gap: 29px;
-    padding-left: 0;
+  display: flex;
+  gap: 29px;
+  padding-left: 0;
 }
 
 .navigation__link {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 19px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
 }
 
 .line {
-    border-bottom: 1px solid #D6D6D6;
-    justify-self: center;
-    padding-top: 10px;
+  border-bottom: 1px solid #D6D6D6;
+  justify-self: center;
+  padding-top: 10px;
 }
 
 .section__about{
-    background-color: #FFFFFF;
-    padding: 0 100px 37px 80px;
+  padding: 0 100px 37px 80px;
 }
 
 .about {
-display: flex;
-padding-top: 110px;
+  display: flex;
+  padding-top: 110px;
 }
 
 .about__me {
-    display: flex;
-    flex-direction: column;
-    margin-right: 200px;
-    margin-top: 65px;
-    gap: 29px;
+  display: flex;
+  flex-direction: column;
+  margin-right: 200px;
+  margin-top: 65px;
+  gap: 29px;
 }
 
 .about__title {
-font-weight: 900;
-font-size: 32px;
-line-height: 38px;
-margin: 0;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 38px;
+  margin: 0;
 }
 .title__profession {
-font-weight: 900;
-font-size: 32px;
-line-height: 38px;
-color: #5562FF;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 38px;
+  color: #5562FF;
 }
 .about__text {
-margin: 0;
-font-weight: 400;
-font-size: 18px;
-line-height: 22px;
+  margin: 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
 }
-.about__button {
-width: 159px;
-height: 40px;
-background-color: #FE481C;
-font-weight: 700;
-font-size: 16px;
-line-height: 19px;
-color: #FFFFFF;
-border: 0;
+.button {
+  width: 159px;
+  height: 40px;
+  background-color: #FE481C;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FFFFFF;
+  border: 0;
 }
 
 .about__photo {
-    width: 400px;
-    height: 400px;
+  width: 400px;
+  height: 400px;
 }
 .img {
-    border-radius: 200px;
-    margin: 0 0 0 115px;
+  border-radius: 200px;
+  margin: 0 0 0 115px;
 }
 
 .icons {
-    display: flex;
-    justify-content: center;
-    gap: 23px;
-    margin: 75px 565px 0 550px;
+  display: flex;
+  justify-content: center;
+  gap: 23px;
+  margin: 75px 565px 0 550px;
 }
 
 .skills {
-    background-color: #FFFFFF;
-    padding-top: 48px;
-    padding-bottom: 66px;
+  padding-top: 48px;
+  padding-bottom: 66px;
 }
 
 .section__title {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 28px;
-    text-align: center;
-    margin: 0;
-    margin-bottom: 62px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 62px;
 }
 
 .skills__subtitle{
-margin: 0 0 12px 85px;
-font-weight: 700;
-font-size: 20px;
-line-height: 23px;
+  margin: 0 0 12px 85px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
 }
 .skills__text{
-margin: 0 0 14px 85px;
-font-weight: 400;
-font-size: 20px;
-line-height: 23px;
+  margin: 0 0 14px 85px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
 }
 
 .last {
-    margin-top: 60px;
+  margin-top: 60px;
 }
 .skills__buttons{
-    margin: 0 0 0 85px;
-    display: flex;
-    gap: 17px;
-    width: 424px;
-    height: 40px;
+  margin: 0 0 0 85px;
+  display: flex;
+  gap: 17px;
+  width: 424px;
+  height: 40px;
 }
 
 .btn__skill {
-border: 0;
-background-color: #5562FF;
-text-align: center;
-justify-content: center;
-font-weight: 900;
-font-size: 16px;
-line-height: 19px;
-color: #FFFFFF;
+  border: 0;
+  background-color: #5562FF;
+  text-align: center;
+  justify-content: center;
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FFFFFF;
 }
 
 .first, 
 .fourth {
-    width: 87px;
+  width: 87px;
 }
 
 .second {
-    width: 75px;
+  width: 75px;
 }
 
 .third {
-    width: 124px;
+  width: 124px;
 }
 
 .projects {
-    background-color: #FFFFFF;
-    padding-top: 37px;
-    padding-bottom: 49px;
+  padding-top: 37px;
+  padding-bottom: 49px;
 }
 
 .projects__list {
-display: flex;
-justify-content: center;
-gap: 55px;
+  display: flex;
+  justify-content: center;
+  gap: 55px;
 }
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 46px;
+  padding-bottom: 49px;
+}
+
+.contacts__title {
+  margin-bottom: 43px;
+    }
+.contacts__inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 21px;
+
+}
+
+.input {
+  width: 500px;
+  height: 40px;
+  border: 1px solid;
+}
+
+.phone {
+  margin-bottom: 43px;
+}
+
+.footer {
+  padding: 16px 90px 17px 90px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #0E0D09;
+  color: #FFFFFF;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+}
+
+.footer__link {
+  color: #FFFFFF;
+}
+
