--- a/style.css
+++ b/style.css
@@ -102,14 +102,14 @@ a {
   font-size: 18px;
   line-height: 22px;
 }
-.button {
+
+
+.btn__link {
   width: 159px;
   height: 40px;
   background-color: #FE481C;
   border: 0;
-}
-
-.btn__link {
+  padding: 10px 22px;
   font-weight: 700;
   font-size: 16px;
   line-height: 19px;
