--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   height: 100%;
   /* background-color: #F5F5F5; */
   background-color: #FFFFFF;
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
 }
 
@@ -23,6 +23,11 @@ ul, li{
 
 a {
   text-decoration: none;
+}
+
+.wrapper {
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .header {
@@ -233,14 +238,18 @@ a {
 .input {
   width: 500px;
   height: 40px;
-  border: 1px solid;
+  border: 2px solid #D9D9D9;
+  padding-left: 15px;
+  font-weight: 700;
+  font-size: 16px;
+  color: #D9D9D9;
 }
 
 .phone {
   margin-bottom: 43px;
 }
 
-.footer {
+.footer__container {
   padding: 16px 90px 17px 90px;
   display: flex;
   justify-content: space-between;
